# Cineplex_Watcher

./: .env.example  .env.production.example  .gitattributes  .gitignore  CLAUDE.md  Caddyfile  README.md  context.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_watch_name.py  003_add_watch_showtime_at.py  004_add_notifications_log.py
backend/app/: config.py  database.py  logging_config.py  main.py
backend/app/models/: __init__.py  base.py  magic_link.py  notification.py  seat_event.py  showtime.py  user.py  watch.py  watched_seat.py
backend/app/routers/: admin.py  auth.py  movies.py  showtimes.py  watches.py  ws.py
backend/app/schemas/: auth.py  movies.py  showtimes.py  stats.py  watches.py
backend/app/services/: auth.py  cineplex.py  movies.py  notifications.py  rate_limit.py  redis_client.py  stats.py  watches.py
backend/app/tasks/: celery_app.py  poll_seats.py
docs/: project_summary_for_resume.md
frontend/: .env.local.example  Dockerfile  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: AuthNav.tsx  DateTimePicker.module.css  DateTimePicker.tsx  EmailLoginCard.module.css  EmailLoginCard.tsx  Footer.module.css  Footer.tsx  LiveSeatTicker.module.css  LiveSeatTicker.tsx  LiveStatusPill.module.css  LiveStatusPill.tsx  NowPlayingCarousel.module.css  (+14 more)
frontend/hooks/: useShowtimeEvents.ts
frontend/lib/: api.ts
scripts/: backup-db.sh
(+20 files in other folders)
