[project]
name = "cineplex-watcher-backend"
version = "0.1.0"
description = "Backend for Cineplex Seat Watcher"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    # Database
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
    # Redis / Celery
    "redis>=5.2,<6",
    "celery[redis]>=5.4,<6",
    # HTTP client
    "httpx>=0.28,<1",
    # Config / validation
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    # Auth
    "pyjwt>=2.10,<3",
    # Notifications
    "resend>=2,<3",
    "twilio>=9,<10",
    "pywebpush>=2,<3",
    # Logging
    "structlog>=24,<26",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
